# TFG_CarlotaLaveron

Validations/: Anova.R  CLUSTERING.txt  RMSD.txt  VALIDACIONESwwPDB.txt  anova_log.R  data_anova.csv
scipion-em-moma/: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements_env.txt
scipion-em-moma/.github/workflows/: publish_and_tag.yml
scipion-em-moma/moma/: __init__.py  constants.py  objects.py  protocols.conf  pulchra_installer.py
scipion-em-moma/moma/protocols/: __init__.py  contact_thresholds_range.txtZone.Identifier  protocol_fixer.py  protocol_fixer_IDWandSCM.py  protocol_fixer_cg2all.py  protocol_fixer_cg2allandSCM.py  protocol_fixer_pulchra.py  protocol_idw.py  protocol_optimization.py  protocol_wario.py
scipion-em-moma/moma/protocols/scripts/: cg2all_BB_runner.py  cg2all_runner.py  cg2all_runner_DCD.py  diffpack_runner.py  fix_atoms_runner.py  optimization_runner.py  pippack_runner.py  refine_runner.py  wario_runner.py
scipion-em-moma/moma/viewers/: __init__.py  viewer_wario.py
