[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scipion-em-moma"
dynamic = ["version", "dependencies"]
description = "Scipion plugin moma"
authors = [
    {name = "you", email = "you@yourinstitution.email"}
]
requires-python = ">=3.8"
readme = "README.rst"
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
keywords = ["scipion", "cryoem", "imageprocessing", "scipion-3.0"]

[project.urls]
Homepage = "https://github.com/scipion-em/scipion-em-moma"
Issues = "https://github.com/scipion-em/scipion-em-moma/issues"

[tool.setuptools.dynamic]
version = {attr = "moma.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"moma" = ["protocols.conf", "icon.png"]

[project.entry-points."pyworkflow.plugin"]
moma = "moma"
